# iree

./: .gitmodules
compiler/plugins/: iree_compiler_plugin.cmake
compiler/plugins/lib/rocmlir/: CMakeLists.txt  PluginRegistration.cpp
compiler/plugins/lib/rocmlir/Passes/: CMakeLists.txt  ConvertLinalgNamedToRock.cpp  PassDetail.h  Passes.cpp  Passes.h  Passes.td  TestPass.cpp
compiler/src/iree/compiler/Codegen/Common/GPU/: GPUNestedLayoutDistributionPatterns.cpp
